# Car-Fleet-Management-System

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  seed.py  simulation.py
backend/alembic/: env.py
backend/alembic/versions/: 2025-08-01-14-41_1483f85950a5.py  2025-08-01-16-58_35845bef7fb1.py  2025-08-01-17-43_01f4d4fe6b60.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/routers/: alerts.py  analytics.py  telemetry_data.py  vehicles.py
backend/app/core/: config.py
backend/app/crud/: alert_crud.py  base_crud.py  telemetry_data_crud.py  vehicle_crud.py
backend/app/db/: session.py
backend/app/models/: __init__.py  alert.py  enums.py  telemetry_data.py  vehicle.py
backend/app/schemas/: __init__.py  alert.py  analytics.py  telemetry_data.py  vehicle.py
backend/app/utils/: alert_logic.py  analytics_logic.py
